testfx/errors/error_tests/edge_29_do_while.fx
// do-while循环
x := 0
do {
    x = x + 1
    println(x)
} while (x < 10)
